--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<!-- <script>
-    function xyz() {
-        console.log("a")
-        var a = document.getElementById('test')
-        a.style = "display:block"
-    }
-</script> -->
+
 
 <body>
     <div class="content">
@@ -31,23 +25,25 @@
                                 apps
                             </span></div>
                     </div>
-                    <a href="" class="hypers2">
-                        <div class="avatar"><span class="material-symbols-outlined">
+                    <div class="hypers2" onclick="btnProfile()">
+                        <div class="avatar">
+                            <img src="https://img.icons8.com/nolan/64/test-account.png" alt="Profile Avatar" />
+
+                            <!-- <span class="material-symbols-outlined">
                                 account_circle
-                            </span></div>
-                    </a>
+                            </span> -->
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="moreOption" id="hiddenOption">
-                <a href="#"><img src="images/profile.svg" alt="Profile">
-                    <p>Profile</p>
-                    <!-- <span class="material-symbols-outlined">
-                        account_circle
-                        <p>Profile</p>
-                    </span> -->
-                </a>
                 <a href="#">
-                    <img src="images/photo-library.svg" alt="Photo Library">
+                    <img src="https://img.icons8.com/nolan/64/test-account.png" alt="Profile Avatar"
+                        onclick="btnProfile()" />
+                    <p>Profile</p>
+                </a>
+                <a href="https://wondrous-sopapillas-e9620f.netlify.app/">
+                    <img src="https://img.icons8.com/nolan/64/stack-of-photos.png" alt="Photo Library" />
                     <p>Photo</p>
                 </a>
                 <a href="#"><span class="material-symbols-outlined">
@@ -57,19 +53,12 @@
                         query_stats
                     </span></a>
                 <a href="#">
-                    <div class="track">
-                        <div class="ball">
-                        </div>
-                    </div>
-                    <p>Light</p>
-                    <!-- <div class="toggleoff">
-                        <img src="images/toggleoff.svg" alt="Light">
-                        <p>Light</p>
-                    </div>
-                    <div class="toggleon">
-                        <img src="images/toggleon.svg" alt="Dark">
-                        <p>Dark</p>
-                    </div> -->
+                    <label class="track">
+                        <input type="checkbox" onclick="dark()">
+                        <span class="slider">
+                        </span>
+                    </label>
+                    <p id="switchLightDarkText">Light</p>
                 </a>
                 <a href="#"><span class="material-symbols-outlined">
                         settings
@@ -93,6 +82,15 @@
                         close
                     </span></a>
             </div>
+            <div class="profileSubMenu" id="profileMenu">
+                <img src="https://img.icons8.com/nolan/96/test-account.png" alt="Profile" style="cursor: pointer;" />
+                <div class="subMenuItems">
+                    <p>UserName</p>
+                    <a href="#">Account</a>
+                    <a href="#">Settings</a>
+                    <a href="#">Log Out</a>
+                </div>
+            </div>
         </nav>
 
         <main>
@@ -107,16 +105,18 @@
                         </div>
                         <!-- <input type="search" id="search" name="search" class="search" title="Search" onclick="xyz()"> -->
                         <input type="search" id="search" name="search" class="search" title="Search" autocomplete="off">
-                        <div class="microphone">
+                        <div class="accessOptions">
+                            <div class="mic">
+                                <span class="material-symbols-outlined" style="cursor: pointer;">
+                                    mic
+                                </span>
+                            </div>
 
-                            <span class="material-symbols-outlined" style="cursor: pointer;">
-                                mic
-                            </span>
-
-
-                            <span class="material-symbols-outlined" style="cursor: pointer;">
-                                party_mode
-                            </span>
+                            <div class="mic">
+                                <span class="material-symbols-outlined" style="cursor: pointer;">
+                                    party_mode
+                                </span>
+                            </div>
 
                         </div>
                     </div>
